--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>TestDocument</title>
 </head>
 <body>
-    <h1>Welcome to My Page</h1>
+    <h1>Welcome to My New Page</h1>
     <p>This is a simple HTML document.</p>
     <script>
         console.log("Hello, World!");
